# ContextMesh

./: .env.example  .gitignore  README.md  pyproject.toml
action/: Dockerfile  action.yml
src/contextsync/: __init__.py  config.py  mcp_server.py
src/contextsync/cli/: __init__.py  app.py
src/contextsync/core/: __init__.py  aggregator.py  code_extractor.py  cross_doc_validator.py  diff_analyzer.py  engine.py  patcher.py  qa_pipeline.py  salience.py  tree_walker.py  watcher.py
src/contextsync/llm/: base.py  litellm_adapter.py
src/contextsync/models/: __init__.py  change_log.py  context_file.py  database.py  entity.py  relationship.py
