[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextmesh"
version = "0.1.0"
description = "Change Data Capture for AI-assisted codebases. Keeps context files alive as your code evolves."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Anuroop Katukam", email = "anuroopkatukam@gmail.com" },
]
keywords = ["ai", "context", "cdc", "developer-tools", "cursor", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.0",
    
    # Validation & Models
    "pydantic[email]>=2.0",
    
    # LLM Integrations
    "litellm>=1.20",
    
    # Internal Engine
    "gitpython>=3.1",
    "pathspec>=0.11",
    "watchdog>=4.0.0",
    
    # MCP
    "mcp>=1.0.0",
    "fastmcp>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/Katukam-Anuroop/ContextMesh"

[project.scripts]
contextmesh = "contextsync.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/contextsync"]
